<resources>
    <string name="app_name">GERSOFT</string>
    <string name="txt_pass">Introduza a Password</string>
    <string name="txt_email">Introduza o Email</string>
    <string name="txt_login">Login</string>
    <string name="comentarios_txt">Comentários</string>
    <string name="pedido_na_mesa_txt">Pedido na Mesa</string>
    <string name="takeaway_txt">Takeaway</string>
    <string name="reserva_txt">Reserva de Mesa</string>
    <string name="refeicoes_txt">Refeições Grátis</string>
    <string name="pedidos_txt">Pedidos</string>
    <string name="navMais">Mais</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_pesquisa">menu_pesquisa</string>
    <string name="menu_remover">menu_remover</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <string name="SHARED_USER">DADOS_USER</string>
    <string name="SemligacaoInternet">Sem ligação á internet</string>
    <string name="ErroLogin">Utilizador ou password errada</string>
    <string name="Artigos_menu">Artigos</string>
    <string name="addcomentario">Adicionar Comentario</string>
    <string name="act_titulo">Detalhes:%1$s</string>
    <string name="pedidos_concluidos">Pedidos Concluídos</string>
    <string name="pedidos_emprocessamento">Criar Pedido</string>
    <string name="info_ped_gratis">Só vai poder resgatar uma refeição gratuita quando atingir os pedidos concluídos</string>
</resources>