<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">





        <item
            android:id="@+id/navReserva"
            android:title="@string/reserva_txt"
            android:icon="@drawable/ic_action_reservation_foreground"/>


    <item
        android:id="@+id/navArtigos"
        android:icon="@drawable/ic_action_tablerequest_foreground"
        android:title="@string/Artigos_menu" />

    <group android:checkableBehavior="single">
        <item android:title="Pedidos">
            <menu>
                <item
                    android:id="@+id/navPedidos"
                    android:icon="@drawable/ic_action_tablerequest_foreground"
                    android:title="@string/menu_pedidos" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
            <item android:title="@string/navMais">
                <menu>
                    <item
                        android:id="@+id/navRefeicao"
                        android:title="@string/refeicoes_txt"
                        android:icon="@drawable/ic_action_freefood_foreground"
                        />
                    <item
                        android:id="@+id/navComentarios"
                        android:title="@string/comentarios_txt"
                        android:icon="@drawable/ic_action_comment_foreground"
                        />
                </menu>
            </item>

        </group>

</menu>